Fixed overflow

--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 * {
-    overflow-x: hidden;
     box-sizing: border-box;
 }
 
@@ -52,7 +51,6 @@ ul#menu > li > a {
 
 section {
     height: 100vh;
-    width: 100vw;
     display: block;
 }
 
